# demonade

./: .editorconfig  .gitignore  BUILD.bazel  CREDITS.md  LICENSE.md  README.md  WORKSPACE  jest-setup.cjs  jest.config.js  package.json  pnpm-lock.yaml  prettier.config.cjs  tsconfig.json
.github/workflows/: deploy.yml
__tests__/: index.test.ts  timer.js
__tests__/__snapshots__/: index.test.js.snap
lib/: config.ts  index.ts  logger.ts  process.ts  utils.ts  watcher.ts
tools/: bazel_deps.bzl
