load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("@aspect_rules_jest//jest:defs.bzl", "jest_test")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages()

PACKAGE_NAMESPACE = "block65"

PACKAGE_NAME = "demonade"

SCOPED_PACKAGE_NAME = "@%s/%s" % (PACKAGE_NAMESPACE, PACKAGE_NAME)

SRCS = glob(
    [
        "lib/*.ts",
        "bin/*.ts",
    ],
)

TEST_SRCS = glob(
    [
        "__tests__/**/*",
        "tools/jest*",
    ],
    exclude = ["__tests__/__snapshots__/*.snap"],
)

TEST_SNAPSHOT_SRCS = glob(
    ["__tests__/__snapshots__/*.snap"],
)

DEPS = [
    ":node_modules/@types/node",
    ":node_modules/@block65/custom-error",
    ":node_modules/@block65/logger",
    ":node_modules/@types/yargs",
    ":node_modules/yargs",
    ":node_modules/lilconfig",
    ":node_modules/chokidar",
    ":node_modules/find-up",
    ":node_modules/p-debounce",
]

# deps used just for test srcs (ie dev deps)
TEST_DEPS = [
    ":node_modules/@jest/globals",
]

ts_project(
    name = "compiled",
    srcs = SRCS + TEST_SRCS + ["package.json"],
    declaration = True,
    deps = DEPS + TEST_DEPS,
)

jest_test(
    name = "unit",
    config = "jest.config.js",
    data = [
        ":compiled",
        "package.json",
    ] + DEPS + TEST_DEPS,
    log_level = "debug",
    node_options = [
        "--experimental-vm-modules",
        "--stack-trace-limit=3",
    ],
    snapshots = TEST_SNAPSHOT_SRCS,
)

npm_package(
    name = "pkg",
    srcs = [
        "CREDITS.md",
        "LICENSE.md",
        "README.md",
        "package.json",
        ":compiled",
    ],
    package = SCOPED_PACKAGE_NAME,
    visibility = ["//:__subpackages__"],
)
